# companion-assistant

./: .env.example  .gitignore  Dockerfile  README.md  main.py  main_v2.py  pyproject.toml  railway.json  render.yaml  requirements.txt  server.py  vapid_keys.txt
.obsidian/: workspace.json
data/: conversations.db  trigger_history.json
data/chroma_db/: chroma.sqlite3
docs/: ai_collaboration_guide.md  ai_context.md  coding_standards.md  course_design_report.md  daily_progress.md  deployment_guide.md  diagrams.puml  prompt_log.md  requirements_analysis.md  requirements_mvp.md  tech_stack_decisions.md  walkthrough_email.md  walkthrough_per_agent_config.md  walkthrough_phase2.md  walkthrough_phase3.md  walkthrough_phase4.md
docs/ai_collaboration/: development_protocol.md
docs/submit/: course_design_report.md  项目报告.md
docs/walkthoughs/: walkthrough_phase0.md  walkthrough_phase1.md  walkthrough_supabase.md  walkthrough_v125.md
frontend/: app.js  index.html  manifest.json  style.css  sw.js
scripts/: debug_group_chat.py  debug_sessions.py  generate_vapid_keys.py  setup_supabase_chat.sql  setup_supabase_memory.sql  test_email.py  test_group_selection.py  test_memory.py  test_supabase.py
src/: __init__.py  config.py
src/agents/: __init__.py  chat_manager.py  companion_agent.py  diary_generator.py  info_extractor.py  multi_agent.py  simple_agent.py  token_callback.py
src/api/: __init__.py
src/commands/: __init__.py  command_parser.py
src/database/: __init__.py  db_client.py
src/memory/: __init__.py  chat_store.py  (+6 more)
tests/: test_companion_agent.py
(+20 files in other folders)
